# AstroNightcrawler

./: .env.example  .gitignore  Makefile  README.md  cleancode-python.md  cleancode.md  include.mk  mx.ini  pyproject.toml  requirements-mxdev.txt
.claude/: settings.json  settings.local.json
.claude/memory/: MEMORY.md  feedback_document_issues.md  feedback_execution_mode.md  feedback_git_no_ask.md  feedback_no_coauthor.md  feedback_remote_visual_companion.md  project_architecture_overview.md  project_brainstorm_status.md  project_name.md  project_tech_stack.md  reference_cleancode.md
.mxmake/files/: installed.txt
docs/: architecture.md  async-indi-client.md  dependencies.md  indi-client.md  status.md  stellarium-build.md
docs/superpowers/plans/: 2026-03-22-planner-capture-app.md  2026-03-29-rendering-app.md
docs/superpowers/specs/: 2026-03-22-nightcrawler-design.md  2026-03-22-sequence-planner-design.md  (+1 more)
notebooks/: indi_blob_test.ipynb
scripts/: build_stellarium.sh  download_skydata.sh  install_stellarium.sh  setup.sh
skydata/stars/: properties
src/: app_state.py  config.py  main.py
src/capture/: __init__.py  controller.py  fits_writer.py
src/export/: __init__.py  ekos.py
src/indi/: __init__.py  async_adapter.py  client.py  mock.py  real_client.py
src/models/: freehand.py  project.py  spline.py  undo.py
src/renderer/: __init__.py  alignment.py  cli.py  debayer.py  importer.py  pipeline.py  stretch.py  transitions.py  video.py
src/starmap/: __init__.py  bridge.js  engine.py  path_overlay.js  projection.py
src/ui/: __init__.py  bottom_panel.py  capture_view.py  folder_browser.py  layout.py  overlay_sync.py  toolbar.py
static/stellarium/: stellarium-web-engine.js  stellarium-web-engine.wasm
tests/: test_alignment.py  test_capture_controller.py  test_coord_convert.py  test_debayer.py  test_ekos_export.py  test_fits_writer.py  test_folder_browser.py  test_freehand.py  test_indi_asynclient.py  test_indi_client.py  test_integration.py  test_models.py  test_render_pipeline.py  test_renderer_import.py  test_spline.py  test_stretch.py  test_transitions.py  test_undo.py  test_video.py
(+5 files in other folders)
